fixed scrollbar to by only 'overflow-y' and added 'scrollbar-width: thin'

--- a/style.css
+++ b/style.css
@@ -333,7 +333,8 @@ footer {
   flex-direction: column;
   max-height: 100px;
   text-align: start;
-  overflow: scroll;
+  overflow-y: scroll;
+  scrollbar-width: thin;
   box-sizing: border-box;
   padding-right: 20px;
 }
